新增设置页切换跳转子页面逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">coffee</string>
+
+    <string name="statistic_product">产品统计</string>
+    <string name="statistic_machine_history">机器历史</string>
+    <string name="statistic_wash_machine">洗机历史</string>
+    <string name="statistic_rinse">冲水历史</string>
+    <string name="statistic_fault">故障历史</string>
+
 </resources>
