--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,15 @@
     <string name="statistic_wash_machine">洗机历史</string>
     <string name="statistic_rinse">冲水历史</string>
     <string name="statistic_fault">故障历史</string>
+    <string name="statistic_product_top_date">日期</string>
+    <string name="statistic_product_top_brew_size">制作位置</string>
+    <string name="statistic_product_top_grind_time">研磨时间</string>
+    <string name="statistic_product_top_PQC">PQC</string>
+    <string name="statistic_product_top_ext_time">ext_time[s]</string>
+    <string name="statistic_product_top_water_qnty">water_qnty[tick]</string>
+    <string name="statistic_product_top_water_temp">水温[℃]</string>
+    <string name="statistic_product_top_mike_temp">牛奶温度[℃]</string>
+    <string name="statistic_product_top_stream_press">蒸汽压力[bar]</string>
+    <string name="statistic_product_top_product_type">产品类型</string>
 
 </resources>
