--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="statistic_rinse">冲水历史</string>
     <string name="statistic_fault">故障历史</string>
     <string name="statistic_product_top_date">日期</string>
-    <string name="statistic_product_top_brew_size">制作位置</string>
+    <string name="statistic_product_top_brew_side">制作位置</string>
     <string name="statistic_product_top_grind_time">研磨时间</string>
     <string name="statistic_product_top_PQC">PQC</string>
     <string name="statistic_product_top_ext_time">ext_time[s]</string>
@@ -16,5 +16,6 @@
     <string name="statistic_product_top_mike_temp">牛奶温度[℃]</string>
     <string name="statistic_product_top_stream_press">蒸汽压力[bar]</string>
     <string name="statistic_product_top_product_type">产品类型</string>
+    <string name="statistic_product_top_operator">操作账号</string>
 
 </resources>
