--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="statistic_product_top_product_type">产品类型</string>
     <string name="statistic_product_top_operator">操作账号</string>
 
+    <string name="home_login_input_empty">用户名或密码未输入</string>
+    <string name="home_login_input_invalid">用户名或密码长度不符</string>
+    <string name="home_login_authenticate_fail">验证失败</string>
+
 </resources>
