--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,30 @@
 <resources>
     <string name="app_name">coffee</string>
 
-    <string name="statistic_product">产品统计</string>
-    <string name="statistic_machine_history">机器历史</string>
-    <string name="statistic_wash_machine">洗机历史</string>
-    <string name="statistic_rinse">冲水历史</string>
-    <string name="statistic_fault">故障历史</string>
-    <string name="statistic_product_top_date">日期</string>
-    <string name="statistic_product_top_brew_side">制作位置</string>
-    <string name="statistic_product_top_grind_time">研磨时间</string>
+    <string name="common_button_confirm">OK</string>
+    <string name="common_button_cancel">Cancel</string>
+    <string name="first_install_language_Chinese">中文</string>
+    <string name="first_install_language_English">English</string>
+
+    <string name="statistic_product">Product Statistics</string>
+    <string name="statistic_machine_history">Machine History</string>
+    <string name="statistic_wash_machine">Machine Washing History</string>
+    <string name="statistic_rinse">Rinse History</string>
+    <string name="statistic_fault">Fault History</string>
+    <string name="statistic_product_top_date">Date</string>
+    <string name="statistic_product_top_brew_side">Brew Side</string>
+    <string name="statistic_product_top_grind_time">Grind Time</string>
     <string name="statistic_product_top_PQC">PQC</string>
     <string name="statistic_product_top_ext_time">ext_time[s]</string>
     <string name="statistic_product_top_water_qnty">water_qnty[tick]</string>
-    <string name="statistic_product_top_water_temp">水温[℃]</string>
-    <string name="statistic_product_top_mike_temp">牛奶温度[℃]</string>
-    <string name="statistic_product_top_stream_press">蒸汽压力[bar]</string>
-    <string name="statistic_product_top_product_type">产品类型</string>
-    <string name="statistic_product_top_operator">操作账号</string>
+    <string name="statistic_product_top_water_temp">Water Temp[℃]</string>
+    <string name="statistic_product_top_mike_temp">Milk Temp[℃]</string>
+    <string name="statistic_product_top_stream_pressure">Stream Pressure[bar]</string>
+    <string name="statistic_product_top_product_type">Product Type</string>
+    <string name="statistic_product_top_operator">Operate Account</string>
 
-    <string name="home_login_input_empty">用户名或密码未输入</string>
-    <string name="home_login_input_invalid">用户名或密码长度不符</string>
-    <string name="home_login_authenticate_fail">验证失败</string>
+    <string name="home_login_input_empty">Username or Password empty</string>
+    <string name="home_login_input_invalid">Username or Password length not match</string>
+    <string name="home_login_authenticate_fail">verification failed</string>
 
 </resources>
