--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -33,5 +33,6 @@
     <string name="home_login_username">用户名</string>
     <string name="home_login_password">密码</string>
     <string name="home_login_confirm">登陆</string>
+    <string name="home_lock_clean_count_tip">倒计时结束前解锁屏幕</string>
 
 </resources>
