--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -30,9 +30,10 @@
     <string name="home_open_setting">打开设置</string>
     <string name="home_clean_screen">锁屏擦拭</string>
     <string name="home_machine_info">机器信息</string>
+    <string name="home_standby_mode">待机模式</string>
     <string name="home_login_username">用户名</string>
     <string name="home_login_password">密码</string>
     <string name="home_login_confirm">登陆</string>
-    <string name="home_lock_clean_count_tip">倒计时结束前解锁屏幕</string>
+    <string name="home_lock_clean_count_tip">倒计时结束后解锁屏幕</string>
 
 </resources>
