--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="home_open_setting">open settings</string>
     <string name="home_clean_screen">lock and clean</string>
     <string name="home_machine_info">machine info</string>
+    <string name="home_standby_mode">StandBy Mode</string>
     <string name="home_login_input_empty">Username or Password empty</string>
     <string name="home_login_input_invalid">Username or Password length not match</string>
     <string name="home_login_authenticate_fail">verification failed</string>
