--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -36,4 +36,10 @@
     <string name="home_login_confirm">登陆</string>
     <string name="home_lock_clean_count_tip">倒计时结束后解锁屏幕</string>
 
+    <string name="permission_password_correct">密码正确</string>
+    <string name="permission_password_error">密码错误</string>
+    <string name="permission_login_user">登录</string>
+    <string name="permission_update_user">更新用户</string>
+    <string name="permission_insert_user">注册用户</string>
+
 </resources>
