--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,9 +23,9 @@
     <string name="statistic_product_top_product_type">Product Type</string>
     <string name="statistic_product_top_operator">Operate Account</string>
 
-    <string name="home_open_setting">open settings</string>
-    <string name="home_clean_screen">lock and clean</string>
-    <string name="home_machine_info">machine info</string>
+    <string name="home_open_setting">Open Settings</string>
+    <string name="home_clean_screen">Lock and Clean</string>
+    <string name="home_machine_info">Machine Info</string>
     <string name="home_standby_mode">StandBy Mode</string>
     <string name="home_login_input_empty">Username or Password empty</string>
     <string name="home_login_input_invalid">Username or Password length not match</string>
@@ -34,5 +34,11 @@
     <string name="home_login_password">password</string>
     <string name="home_login_confirm">login</string>
     <string name="home_lock_clean_count_tip">Unlock screen before countdown ends</string>
+
+    <string name="permission_password_correct">password correct</string>
+    <string name="permission_password_error">password error</string>
+    <string name="permission_login_user">login</string>
+    <string name="permission_update_user">update</string>
+    <string name="permission_insert_user">register</string>
 
 </resources>
