--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -4,6 +4,17 @@
 
     <string name="common_button_confirm">确认</string>
     <string name="common_button_cancel">取消</string>
+    <string name="common_statistic">统计数据</string>
+    <string name="common_formula">配方管理</string>
+    <string name="common_display">显示配置</string>
+    <string name="common_machine_setting">机器设置</string>
+    <string name="common_machine_operation">机器管理？</string>
+    <string name="common_vat_and_grind">豆缸磨刀</string>
+    <string name="common_wash_machine">洗机设置</string>
+    <string name="common_permission">权限管理</string>
+    <string name="common_maintenance">保养管理</string>
+    <string name="common_serial_test">串口测试</string>
+
     <string name="first_install_language_Chinese">中文</string>
     <string name="first_install_language_English">English</string>
 
