--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,9 @@
     <string name="permission_update_user">update</string>
     <string name="permission_insert_user">register</string>
     <string name="permission_delete_user">delete account</string>
+    <string name="permission_role_employee">Employee</string>
+    <string name="permission_role_manager">Manager</string>
+    <string name="permission_role_support">After-Sales Support</string>
 
 
 </resources>
