新增权限备注，用于个人信息字段

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,9 @@
     <string name="permission_role_employee">Employee</string>
     <string name="permission_role_manager">Manager</string>
     <string name="permission_role_support">After-Sales Support</string>
+    <string name="permission_hint_username">username</string>
+    <string name="permission_hint_password">password</string>
+    <string name="permission_hint_remark">remark</string>
 
 
 </resources>
