--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -56,5 +56,8 @@
     <string name="permission_role_employee">店员</string>
     <string name="permission_role_manager">管理员</string>
     <string name="permission_role_support">售后支持</string>
+    <string name="permission_hint_username">用户名</string>
+    <string name="permission_hint_password">密码</string>
+    <string name="permission_hint_remark">备注</string>
 
 </resources>
