--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -44,7 +44,7 @@
     <string name="home_standby_mode">待机模式</string>
     <string name="home_login_username">用户名</string>
     <string name="home_login_password">密码</string>
-    <string name="home_login_confirm">登陆</string>
+    <string name="home_login_confirm">登录</string>
     <string name="home_lock_clean_count_tip">倒计时结束后解锁屏幕</string>
 
     <string name="permission_password_correct">密码正确</string>
