--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,8 @@
     <string name="home_item_manual_foam">manual foam</string>
     <string name="home_item_cappuccino">Cappuccino</string>
     <string name="home_item_latte">Latte</string>
+    <string name="home_left_boiler_temperature">Left Boiler Temperature: %d°C</string>
+    <string name="home_right_boiler_temperature">Right Boiler Temperature: %d°C</string>
 
     <string name="permission_password_correct">password correct</string>
     <string name="permission_password_error">password error</string>
