修改产品统计数据结构；界面展示

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,24 +27,27 @@
     <string name="statistic_main_machine_counter">机器数据</string>
     <string name="statistic_main_history_data">历史数据</string>
     <string name="statistic_product_top_time">时间</string>
+    <string name="statistic_product_top_press_final">压粉厚度\n[mm]</string>
     <string name="statistic_product_top_brew_side">制作位置</string>
     <string name="statistic_product_top_grind_time">研磨时间</string>
-    <string name="statistic_product_top_PQC">PQC</string>
-    <string name="statistic_product_top_ext_time">萃取时间[s]</string>
-    <string name="statistic_product_top_water_qnty">water_qnty[tick]</string>
-    <string name="statistic_product_top_water_temp">水温[℃]</string>
-    <string name="statistic_product_top_mike_temp">牛奶温度[℃]</string>
-    <string name="statistic_product_top_stream_pressure">蒸汽压力[bar]</string>
+    <string name="statistic_product_top_pqc">PQC</string>
+    <string name="statistic_product_top_grind_adjust">研磨调整</string>
+    <string name="statistic_product_top_ext_time">萃取时间\n[s]</string>
+    <string name="statistic_product_top_water_qnty">water_qnty\n[tick]</string>
+    <string name="statistic_product_top_water_temp">水温\n[℃]</string>
+    <string name="statistic_product_top_mike_temp">牛奶温度\n[℃]</string>
+    <string name="statistic_product_top_stream_pressure">蒸汽压力\n[bar]</string>
     <string name="statistic_product_top_product_type">产品类型</string>
+    <string name="statistic_product_top_cups">杯数</string>
     <string name="statistic_product_top_operator">操作账号</string>
     <string name="statistic_change_top_event">事件</string>
     <string name="statistic_wash_top_duration">时长</string>
     <string name="statistic_wash_top_left">左侧</string>
     <string name="statistic_wash_top_right">右侧</string>
     <string name="statistic_rinse_top_type">冲水类型</string>
-    <string name="statistic_rinse_top_system_flow_rate">系统水流[tick/s]</string>
-    <string name="statistic_rinse_top_water_pressure">水压[bar]</string>
-    <string name="statistic_rinse_top_limit_flow_rate">限流孔水流[tick/s]</string>
+    <string name="statistic_rinse_top_system_flow_rate">系统水流\n[tick/s]</string>
+    <string name="statistic_rinse_top_water_pressure">水压\n[bar]</string>
+    <string name="statistic_rinse_top_limit_flow_rate">限流孔水流\n[tick/s]</string>
     <string name="statistic_reset_all">重置数据</string>
     <string name="statistic_last_reset">上次重置: %s</string>
 
