--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,24 +26,27 @@
     <string name="statistic_main_machine_counter">Machine Counter</string>
     <string name="statistic_main_history_data">History</string>
     <string name="statistic_product_top_time">Time</string>
+    <string name="statistic_product_top_press_final">Press Final\n[mm]</string>
     <string name="statistic_product_top_brew_side">Brew Side</string>
-    <string name="statistic_product_top_grind_time">Grind Time</string>
-    <string name="statistic_product_top_PQC">PQC</string>
-    <string name="statistic_product_top_ext_time">ext_time[s]</string>
-    <string name="statistic_product_top_water_qnty">water_qnty[tick]</string>
-    <string name="statistic_product_top_water_temp">Water Temp[℃]</string>
-    <string name="statistic_product_top_mike_temp">Milk Temp[℃]</string>
-    <string name="statistic_product_top_stream_pressure">Stream Pressure[bar]</string>
+    <string name="statistic_product_top_grind_time">Grind Time\n[s]</string>
+    <string name="statistic_product_top_pqc">PQC</string>
+    <string name="statistic_product_top_grind_adjust">Grind Adjust</string>
+    <string name="statistic_product_top_ext_time">Ext Time\n[s]</string>
+    <string name="statistic_product_top_water_qnty">Water Quality\n[tick]</string>
+    <string name="statistic_product_top_water_temp">Water Temp\n[℃]</string>
+    <string name="statistic_product_top_mike_temp">Milk Temp\n[℃]</string>
+    <string name="statistic_product_top_stream_pressure">Steam Press\n[bar]</string>
     <string name="statistic_product_top_product_type">Product Type</string>
+    <string name="statistic_product_top_cups">Cups</string>
     <string name="statistic_product_top_operator">Operate Account</string>
     <string name="statistic_change_top_event">Event</string>
     <string name="statistic_wash_top_duration">Duration</string>
     <string name="statistic_wash_top_left">Left</string>
     <string name="statistic_wash_top_right">Right</string>
     <string name="statistic_rinse_top_type">Rinse Type</string>
-    <string name="statistic_rinse_top_system_flow_rate">System Flow Rate[tick/s]</string>
-    <string name="statistic_rinse_top_water_pressure">Water Pressure[bar]</string>
-    <string name="statistic_rinse_top_limit_flow_rate">Limit Flow Rate[tick/s]</string>
+    <string name="statistic_rinse_top_system_flow_rate">System Flow Rate\n[tick/s]</string>
+    <string name="statistic_rinse_top_water_pressure">Water Pressure\n[bar]</string>
+    <string name="statistic_rinse_top_limit_flow_rate">Limit Flow Rate\n[tick/s]</string>
     <string name="statistic_reset_all">Reset All</string>
     <string name="statistic_last_reset">Last Reset: %s</string>
 
