--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="statistic_rinse_top_type">Rinse Type</string>
     <string name="statistic_rinse_top_system_flow_rate">System Flow Rate\n[tick/s]</string>
     <string name="statistic_rinse_top_water_pressure">Water Pressure\n[bar]</string>
-    <string name="statistic_rinse_top_limit_flow_rate">Limit Flow Rate\n[tick/s]</string>
+    <string name="statistic_rinse_top_limit_flow_rate">NOZZLE Limit Flow Rate\n[tick/s]</string>
     <string name="statistic_reset_all">Reset All</string>
     <string name="statistic_last_reset">Last Reset: %s</string>
 
