--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="statistic_product_top_water_qnty">Water Quality\n[tick]</string>
     <string name="statistic_product_top_water_temp">Water Temp\n[℃]</string>
     <string name="statistic_product_top_mike_temp">Milk Temp\n[℃]</string>
-    <string name="statistic_product_top_stream_pressure">Steam Press\n[bar]</string>
+    <string name="statistic_product_top_stream_pressure">Steam Pressure\n[bar]</string>
     <string name="statistic_product_top_product_type">Product Type</string>
     <string name="statistic_product_top_cups">Cups</string>
     <string name="statistic_product_top_operator">Operate Account</string>
@@ -49,6 +49,10 @@
     <string name="statistic_rinse_top_limit_flow_rate">NOZZLE Limit Flow Rate\n[tick/s]</string>
     <string name="statistic_reset_all">Reset All</string>
     <string name="statistic_last_reset">Last Reset: %s</string>
+    <string name="statistic_left">L</string>
+    <string name="statistic_right">R</string>
+    <string name="statistic_on">On</string>
+    <string name="statistic_off">Off</string>
 
     <string name="home_open_setting">Open Settings</string>
     <string name="home_clean_screen">Lock and Clean</string>
